# twitch-project

./: .env.example  .gitignore  LICENSE  README.md  analysis_notebook.ipynb  docker-compose.yaml  main.py  pyproject.toml
dags/: twitch_pipeline.py
notebooks/: clickhouse_playground.ipynb  scouting_notebook.ipynb  twitch_analytics.ipynb
src/: __init__.py  clickhouse_loader.py  extract.py  load.py  transform.py  twitch_api.py
